*** empty log message ***

--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -38,9 +38,9 @@
 
 @ARTICLE{CDHW73,
   AUTHOR        = {John J. Cannon and Lucien A. Dimino and George Havas
-			and Jane M. Watson},
+                        and Jane M. Watson},
   TITLE         = {Implementation and analysis of the {Todd-Coxeter}
-			algorithm},
+                        algorithm},
   JOURNAL       = {Mathematics of Computation},
   YEAR          = {1973},
   VOLUME        = {27},
@@ -53,7 +53,7 @@
   AUTHOR        = {Dragomir Z. Dokovic},
   TITLE         = {Presentations of some finite simple groups},
   JOURNAL       = {Journal of the Australian Mathematical Society 
-			(Series A)},
+                        (Series A)},
   YEAR          = {1988},
   VOLUME        = {45},
   NUMBER        = {2},
@@ -86,7 +86,7 @@
 @ARTICLE{Magma,
   AUTHOR        = {W. Bosma and J. Cannon and C. Playoust},
   TITLE         = {The \textsc{Magma} algebra system {I}: 
-			the user language},
+                        the user language},
   JOURNAL       = {Journal of Symbolic Computation},
   YEAR          = {1997},
   VOLUME        = {24},
@@ -98,7 +98,7 @@
   AUTHOR        = {M. {Sch\"onert et al.}},
   ORGANIZATION  = {Lehrstuhl D f\"ur Mathematik},
   ADDRESS       = {Rheinisch-Westf\"alische Technische Hochschule,
-			Aachen},
+                        Aachen},
   YEAR          = {1995}
 }
 
@@ -114,7 +114,7 @@
 
 @INCOLLECTION{HKRR84,
   AUTHOR        = {George Havas and P.E. Kenne and J.S. Richardson and
-			E.F. Robertson},
+                        E.F. Robertson},
   TITLE         = {A {Tietze} transformation program},
 
   BOOKTITLE     = {Computational Group Theory},
@@ -134,16 +134,19 @@
   PAGES         = {19--25}
 }
 
-@INPROCEEDINGS{Hav91,
-  AUTHOR        = {George Havas},
-  TITLE         = {Coset enumeration strategies},
-  BOOKTITLE     = {ISSAC'91 (Proceedings of the 1991 International
-			Symposium on Symbolic and Algebraic Computation)},
-  YEAR          = {1991},
-  EDITOR        = {Stephen M. Watt},
-  PAGES         = {191--199},
-  PUBLISHER     = {ACM Press}
-}
+%% Already included in ../../../doc/manual.bib}
+%% ... by removing the `at' symbol BibTeX sees the following as comments:
+%%
+%% INPROCEEDINGS{Hav91,
+%%   AUTHOR        = {George Havas},
+%%   TITLE         = {Coset enumeration strategies},
+%%   BOOKTITLE     = {ISSAC'91 (Proceedings of the 1991 International
+%%                         Symposium on Symbolic and Algebraic Computation)},
+%%   YEAR          = {1991},
+%%   EDITOR        = {Stephen M. Watt},
+%%   PAGES         = {191--199},
+%%   PUBLISHER     = {ACM Press}
+%% }
 
 @BOOK{Pla92,
   AUTHOR        = {P.J. Plauger},
@@ -153,26 +156,26 @@
 }
 
 @MISC{C11,
-  KEY		= {Group-pub-forum},
+  KEY           = {Group-pub-forum},
   NOTE          = {Group-pub-forum e-mail list
-		     (\Mailto{group-pub-forum@maths.bath.ac.uk}),
-		   Problem 11, 1996.
-		   See
+                     (\Mailto{group-pub-forum@maths.bath.ac.uk}),
+                   Problem 11, 1996.
+                   See
                    {\rmqquadafter\URL{http://www2.bath.ac.uk/~masgcs/problem/problem11.htm}}}
 }
 
 @MISC{HHKR,
   AUTHOR        = {George Havas and Derek F. Holt and P.E. Kenne and
-			Sarah Rees},
+                        Sarah Rees},
   TITLE         = {Some challenging group presentations},
   YEAR          = {1999 (preprint)}
 }
 
 @MISC{HR99a,
-  AUTHOR	= {George Havas and Colin Ramsay},
-  TITLE		= {Coset enumeration: {\sf ACE} version 3},
+  AUTHOR        = {George Havas and Colin Ramsay},
+  TITLE                = {Coset enumeration: {\sf ACE} version 3},
   YEAR          = {1999},
-  NOTE		= {Available as 
+  NOTE                = {Available as 
                    {\rmqquadafter\URL{http://www.csee.uq.edu.au/~havas/ace3.tar.gz}}}
 }
 
@@ -212,14 +215,14 @@
 }
 
 @MISC{Fel98,
-  AUTHOR	= {V. Felsch},
-  NOTE		= {E-mail to Havas, 1998}
+  AUTHOR        = {V. Felsch},
+  NOTE          = {E-mail to Havas, 1998}
 }
 
 @ARTICLE{Moo97,
   AUTHOR        = {E.H. Moore},
   TITLE         = {Concerning the abstract groups of order $k!$ and
-	           $\frac{1}{2}k!$ holohedrically isomorphic with the
+                   $\frac{1}{2}k!$ holohedrically isomorphic with the
                    symmetric and the alternating substitution-groups
                    on $k$ letters},
   JOURNAL       = {Proceedings of the London Mathematical Society (1)},
@@ -231,7 +234,7 @@
 @ARTICLE{TC36,
   AUTHOR        = {J.A. Todd and H.S.M. Coxeter},
   TITLE         = {A practical method for enumerating cosets of finite
-			abstract groups},
+                        abstract groups},
   JOURNAL       = {Proceedings of the Edinburgh Mathematical Society},
   YEAR          = {1936},
   VOLUME        = {5},
@@ -260,7 +263,7 @@
 %% INCOLLECTION{Neu82,
 %%   AUTHOR        = {J. Neub\"{u}ser},
 %%   TITLE         = {An elementary introduction to coset table methods in
-%% 			computational group theory},
+%%                         computational group theory},
 %%   BOOKTITLE     = {Groups -- St. Andrews 1981},
 %%   SERIES        = {London Mathematical Society Lecture Note Series 71},
 %%   PUBLISHER     = {Cambridge University Press},
@@ -271,12 +274,12 @@
 @ARTICLE{Men64,
   AUTHOR        = {N.S. Mendelsohn},
   TITLE         = {An algorithmic solution for a word problem in group
-			theory},
+                        theory},
   JOURNAL       = {Canadian Journal of Mathematics},
   YEAR          = {1964},
   VOLUME        = {16},
   PAGES         = {509--516},
-  NOTE		= {Corrigendum: \textit{Ibid.} 17:505, 1965.}
+  NOTE          = {Corrigendum: \textit{Ibid.} 17:505, 1965.}
 }
 
 @ARTICLE{Con65,
@@ -286,15 +289,15 @@
   YEAR          = {1965},
   VOLUME        = {72},
   PAGES         = {915},
-  NOTE		= {Solutions, by various authors, given in: 
-		   Generators and relations for cyclic groups,
-		   \textit{Ibid.}, 74:91--93, 1965.}
+  NOTE          = {Solutions, by various authors, given in: 
+                   Generators and relations for cyclic groups,
+                   \textit{Ibid.}, 74:91--93, 1965.}
 }
 
 @BOOK{Dic01,
   AUTHOR        = {L.E. Dickson},
   TITLE         = {Linear Groups, with an exposition of the Galois field
-			theory},
+                        theory},
   PUBLISHER     = {B.G. Teubner, Leipzig},
   YEAR          = {1901}
 }
@@ -328,9 +331,9 @@
 @ARTICLE{Neu54,
   AUTHOR        = {B.H. Neumann},
   TITLE         = {An essay on free products of groups with
-			amalgamations},
+                        amalgamations},
   JOURNAL       = {Philosophical Transactions of the Royal Society of
-			London (A)},
+                        London (A)},
   YEAR          = {1954},
   VOLUME        = {246},
   PAGES         = {503--554}
@@ -342,7 +345,7 @@
   JOURNAL       = {The Mathematical Intelligencer},
   YEAR          = {1979},
   VOLUME        = {2},
-  ISSUE		= {1},
+  ISSUE         = {1},
   PAGES         = {18--19}
 }
 
@@ -350,7 +353,7 @@
   AUTHOR        = {Gene Cooperman and George Havas},
   TITLE         = {Practical parallel coset enumeration},
   BOOKTITLE     = {Workshop on High Performance Computing and Gigabit 
-			Local Area Networks},
+                        Local Area Networks},
   PUBLISHER     = {Springer-{\kern-1.5pt}Verlag},
   YEAR          = {1997},
   EDITOR        = {G. Cooperman and G. Michler and H. Vinck},
@@ -361,7 +364,7 @@
 
 @BOOK{CLR90,
   AUTHOR        = {Thomas H. Cormen and Charles E. Leiserson and Ronald
-			L. Rivest},
+                        L. Rivest},
   TITLE         = {Introduction to Algorithms},
   PUBLISHER     = {The MIT Press},
   YEAR          = {1990}
